# burpla-cloud-run-hackathon

./: .gitignore  CI_CD_OVERVIEW.md  Project-Story.yaml  TEAM_UPDATE.md  gcs_chat.db  main.py  package-lock.json  package.json  pnpm-lock.yaml  readme.md  requirements.txt
backend/: .gitignore  CHANGES.md  Dockerfile  FIRESTORE_QUICKSTART.md  README.md  SETUP.md  burbla.db  cli.py  config.py  convo_sample.json  database_test.ipynb  frontend_example.html  google_map.html  main.py  my_agent_data.db  pyproject.toml  pyrefly.toml  remove_user_sessions.py  requirements.txt  setup_firestore.sh  test_agent.py  test_simple_vote.py
backend/agent/: agent.py  agent_team.py  config.py  firestore_session.py  sub_agent.py  tools.py
backend/agent/sub_agents/: recommendation_card.py  vote_card.py
backend/agent_gadk/: orchestrator.py  tools.py
backend/agent_gadk/sub_agents/: recommendation_card.py  vote_card.py
backend/agent_langchain/: agent.py  orchestrator.py  server.py  tools.py
backend/base_models/: agent_models.py  base_models.py  db_models.py
backend/cloud_hack_agent/: __init__.py  agent.py  distance_matrix.py  places_tool.py  tools.py  vote_agent.py
backend/db_services/: chat.py  convo.py  sample.json  session.py  user.py
backend/gcs/: models.py  pubsub.py  websocket.py
backend/my_agent/: tools.py
backend/research/: agent_team.ipynb  agent_with_memory.ipynb  agent_with_planner.py  agent_with_tools.ipynb  memory.py  multi_models.ipynb
backend/routers/: chat.py  session.py  user.py
backend/tools/: google_map.py
cloud_hack_agent/: README.md  agent.py  places_tool.py
frontend/: .dockerignore  .gcloudignore  Dockerfile  ENV_SETUP.md  README.md  REDIRECT_URI_FIX.md  cloudbuild.yaml  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
frontend-test/: .dockerignore  .gcloudignore  Dockerfile
mobile/: App.js  GoogleService-Info.plist  README.md  app.json  package-lock.json  package.json
my_agent/: agent.py
scripts/: dev.sh
(+58 files in other folders)
