[tool.poetry]
name = "burpla-backend"
version = "0.1.0"
description = "Backend API for Burpla Cloud Run Hackathon"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "cloud_hack_agent"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.118.2"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
python-dotenv = "^1.0.0"
google-genai = "^1.47.0"
requests = "^2.31.0"
googlemaps = "^4.10.0"
pydantic = "^2.11.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
ruff = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

